Factory pattern implementation completed for comm interfaces too. Not yet tested.

--- a/DomoticPi/nodeConfig.json
+++ b/DomoticPi/nodeConfig.json
@@ -1,52 +1,51 @@
 {
   "id": "node57",
-  "name": "House",
+  "name": "Flow3r House",
   "inputs": [
     {
       "id": "001",
       "name": "test1",
-      "type": "digital",
+      "type": "DigitalInput",
       "pin": 0,
       "pud": 1
+    }
+  ],
+  "outputs": [
+    {
+      "id": "001",
+      "name": "testOut",
+      "type": "DigitalOutput",
+      "pin": 1
     },
     {
       "id": "002",
-      "name": "mqttTestIn",
-      "type": "mqtt",
-      "mqttInterface": {
-        "broker": "127.0.0.1",
-        "port": 1883,
-        "topic": "button/POWER1",
-        "username": "DEVS_USER",
-        "password": "DEVS_PASS"
-      },
-
-      "outputs": [
-        {
-          "id": "001",
-          "name": "testOut",
-          "type": "digital",
-          "pin": 1
-        },
-        {
-          "id": "002",
-          "name": "mqttTestOut",
-          "type": "mqtt",
-          "mqttInterface": {
-            "broker": "127.0.0.1",
-            "port": 1883,
-            "topic": "tasmota-sonoff/POWER1",
-            "username": "DEVS_USER",
-            "password": "DEVS_PASS"
-          }
-        }
-      ],
-      "bindings": [
-        {
-          "inputId": "001",
-          "outputId": "001",
-          "inputState": 2,
-          "outputAction": 2
-        }
-      ]
+      "name": "Gruppo TV",
+      "type": "MqttOutput",
+      "comm": "127.0.0.1",
+      "mqttTopic": "sala/POWER3"
+    },
+    {
+      "id": "003",
+      "name": "Luce TV",
+      "type": "MqttOutput",
+      "comm": "127.0.0.1",
+      "mqttTopic": "sala/POWER1"
     }
+  ],
+  "comms": [
+    {
+      "mqttBroker": "127.0.0.1",
+      "mqttPort": 1883,
+      "mqttUsername": "domoticPi",
+      "mqttPassword": "ipcitomod"
+    }
+  ]
+  "bindings": [
+    {
+      "inputId": "001",
+      "outputId": "001",
+      "inputState": 2,
+      "outputAction": 2
+    }
+  ]
+}
