--- a/LibDomoticPi/LibDomoticPi.vcxproj
+++ b/LibDomoticPi/LibDomoticPi.vcxproj
@@ -86,10 +86,12 @@
     <MultiProcNumber>4</MultiProcNumber>
   </PropertyGroup>
   <ItemGroup>
+    <ClInclude Include="include\ButtonState.h" />
+    <ClInclude Include="include\IButtonStateGenerator.h" />
+    <ClInclude Include="include\CallbackToken.h" />
     <ClInclude Include="include\CommFactory.h" />
-    <ClInclude Include="include\DigitalInput.h" />
-    <ClInclude Include="include\DigitalOutput.h" />
-    <ClInclude Include="include\DomoticAPI.h" />
+    <ClInclude Include="include\DigitalButton.h" />
+    <ClInclude Include="include\DigitalSwitch.h" />
     <ClInclude Include="include\DomoticNode.h" />
     <ClInclude Include="include\domoticPi.h" />
     <ClInclude Include="include\domoticPiDefine.h" />
@@ -101,11 +103,11 @@
     <ClInclude Include="include\IOutput.h" />
     <ClInclude Include="include\libDomoticPi.h" />
     <ClInclude Include="include\IModule.h" />
+    <ClInclude Include="include\MqttButton.h" />
     <ClInclude Include="include\MqttComm.h" />
-    <ClInclude Include="include\MqttInput.h" />
     <ClInclude Include="include\MqttLib.h" />
-    <ClInclude Include="include\MqttOutput.h" />
     <ClInclude Include="include\MqttSubscription.h" />
+    <ClInclude Include="include\MqttSwitch.h" />
     <ClInclude Include="include\MqttVolume.h" />
     <ClInclude Include="include\OutputFactory.h" />
     <ClInclude Include="include\OutState.h" />
@@ -127,22 +129,24 @@
     <Text Include="CMakeLists.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="srcs\CallbackToken.cpp" />
+    <ClCompile Include="srcs\DigitalButton.cpp" />
+    <ClCompile Include="srcs\IButtonStateGenerator.cpp" />
     <ClCompile Include="srcs\CommFactory.cpp" />
-    <ClCompile Include="srcs\DigitalInput.cpp" />
-    <ClCompile Include="srcs\DigitalOutput.cpp" />
+    <ClCompile Include="srcs\DigitalSwitch.cpp" />
     <ClCompile Include="srcs\DomoticNode.cpp" />
     <ClCompile Include="srcs\domoticPi.cpp" />
     <ClCompile Include="srcs\IAHKAccessory.cpp" />
     <ClCompile Include="srcs\IComm.cpp" />
     <ClCompile Include="srcs\IModule.cpp" />
+    <ClCompile Include="srcs\MqttButton.cpp" />
     <ClCompile Include="srcs\MqttComm.cpp" />
     <ClCompile Include="srcs\IInput.cpp" />
     <ClCompile Include="srcs\InputFactory.cpp" />
     <ClCompile Include="srcs\IOutput.cpp" />
-    <ClCompile Include="srcs\MqttInput.cpp" />
     <ClCompile Include="srcs\MqttLib.cpp" />
-    <ClCompile Include="srcs\MqttOutput.cpp" />
     <ClCompile Include="srcs\MqttSubscription.cpp" />
+    <ClCompile Include="srcs\MqttSwitch.cpp" />
     <ClCompile Include="srcs\MqttVolume.cpp" />
     <ClCompile Include="srcs\OutputFactory.cpp" />
     <ClCompile Include="srcs\Pin.cpp" />
@@ -205,7 +209,7 @@
   <ImportGroup Label="ExtensionTargets" />
   <ProjectExtensions>
     <VisualStudio>
-      <UserProperties json-schema_4Input_1json__JSONSchema="http://json-schema.org/draft-04/schema" json-schema_4DomoticNode_1json__JSONSchema="http://json-schema.org/draft-04/schema" json-schema_4ioBinding_1json__JSONSchema="http://json-schema.org/draft-04/schema" json-schema_4syspath_1json__JSONSchema="http://json-schema.org/draft-04/schema" />
+      <UserProperties json-schema_4Input_1json__JSONSchema="http://json-schema.org/draft-04/schema" json-schema_4DomoticNode_1json__JSONSchema="http://json-schema.org/draft-04/schema" json-schema_4Output_1json__JSONSchema="http://json-schema.org/draft-04/schema" json-schema_4ioBinding_1json__JSONSchema="http://json-schema.org/draft-04/schema" json-schema_4syspath_1json__JSONSchema="http://json-schema.org/draft-04/schema" />
     </VisualStudio>
   </ProjectExtensions>
 </Project>
