--- a/LibDomoticPi/CMakeLists.txt
+++ b/LibDomoticPi/CMakeLists.txt
@@ -1,20 +1,35 @@
-cmake_minimum_required(VERSION 3.7)
-
 project(libDomoticPi)
+cmake_minimum_required(VERSION 3.7)
 
 set(LIB_NAME "domoticPi")
 
-set ( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -fPIC -fexceptions -Wno-psabi -Wno-unknown-pragmas -DSPDLOG_FMT_PRINTF" )
-set ( CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O0 -Wall -g2 -gdwarf-2" )
+file(GLOB_RECURSE LIB_SRCS "srcs/*.cpp")
+file(GLOB_RECURSE LIB_HEADERS "include/*.h")
+
+add_definitions("-DSPDLOG_FMT_PRINTF")
+add_compile_options("-Wall" "-Wno-unknown-pragmas" "-fexceptions" "-std=c++17")
+
+set ( CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O0 -g2 -gdwarf-2" )
 set ( CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3" )
 
-file(GLOB LIB_SRCS "src/*.cpp")
+include_directories("include")
 
-file(GLOB LIB_HEADERS "include/*.h")
+link_libraries(wiringPi pthread mosquitto hap)
 
-add_library(${LIB_NAME} SHARED
-	${LIB_SRCS}
-	${LIB_HEADERS}
+add_library(${LIB_NAME}_static STATIC ${LIB_SRCS})
+set_target_properties(${LIB_NAME}_static PROPERTIES OUTPUT_NAME ${LIB_NAME})
+
+add_library(${LIB_NAME} SHARED ${LIB_SRCS})
+
+### Installation
+install(TARGETS ${LIB_NAME}
+        LIBRARY DESTINATION /usr/local/lib
 )
 
-target_link_libraries(${LIB_NAME} wiringPi pthread mosquitto hap)
+install(TARGETS ${LIB_NAME}_static
+        ARCHIVE DESTINATION /usr/local/lib
+)
+
+install(FILES ${LIB_HEADERS}
+        DESTINATION /usr/local/include/${LIB_NAME}
+)
