--- a/LibDomoticPi/LibDomoticPi.vcxproj
+++ b/LibDomoticPi/LibDomoticPi.vcxproj
@@ -103,6 +103,7 @@
     <ClInclude Include="include\IOutput.h" />
     <ClInclude Include="include\libDomoticPi.h" />
     <ClInclude Include="include\IModule.h" />
+    <ClInclude Include="include\MqttAwning.h" />
     <ClInclude Include="include\MqttButton.h" />
     <ClInclude Include="include\MqttComm.h" />
     <ClInclude Include="include\MqttLib.h" />
@@ -139,6 +140,7 @@
     <ClCompile Include="srcs\IAHKAccessory.cpp" />
     <ClCompile Include="srcs\IComm.cpp" />
     <ClCompile Include="srcs\IModule.cpp" />
+    <ClCompile Include="srcs\MqttAwning.cpp" />
     <ClCompile Include="srcs\MqttButton.cpp" />
     <ClCompile Include="srcs\MqttComm.cpp" />
     <ClCompile Include="srcs\IInput.cpp" />
@@ -199,10 +201,12 @@
       <LibraryDependencies>hap;wiringPi;pthread;mosquitto</LibraryDependencies>
     </Link>
     <RemotePostBuildEvent>
-      <Command>sudo ln -sf $(RemoteOutDir)$(TargetFileName) /usr/local/lib/$(TargetFileName); if [ ! -L /usr/local/include/domoticPi ]; then sudo ln -s $(RemoteProjectDir)/include /usr/local/include/domoticPi; fi;</Command>
+      <Command>
+      </Command>
     </RemotePostBuildEvent>
     <RemotePostBuildEvent>
-      <Message>Create global library link</Message>
+      <Message>
+      </Message>
     </RemotePostBuildEvent>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
