Install script added to ease dependencies installation and project compilation and installation

--- a/DomoticPi/CMakeLists.txt
+++ b/DomoticPi/CMakeLists.txt
@@ -2,10 +2,10 @@ project(DomoticPi)
 cmake_minimum_required(VERSION 3.7)
 
 add_definitions("-DSPDLOG_FMT_PRINTF")
-add_compile_options("-Wall" "-Wno-unknown-pragmas" "-fexceptions" "-std=c++17")
+add_compile_options("-Wall" "-Wno-unknown-pragmas" "-Wno-psabi" "-fexceptions" "-std=c++17")
 
 set ( CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O0 -g2 -gdwarf-2" )
-set ( CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3" )
+set ( CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3 -flto -fomit-frame-pointer" )
 
 include_directories("include")
 
