MqttVolume module HAP abstraction method updated

--- a/DomoticPi/DomoticPi.vcxproj
+++ b/DomoticPi/DomoticPi.vcxproj
@@ -37,7 +37,7 @@
     <MultiProcNumber>4</MultiProcNumber>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|ARM'">
-    <IncludePath>$(IncludePath)</IncludePath>
+    <IncludePath>../include;$(IncludePath)</IncludePath>
     <MultiProcNumber>4</MultiProcNumber>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|ARM'">
